# TestAgent

./: .gitignore  pyproject.toml  run_agent.py
examples/sample_repo/: AGENT.md  calculator.py
examples/sample_repo/tests/: test_calculator.py
examples/tasks/: sample_task.json
src/my_agent/: cli.py  config.py  indexer.py  schema.py
src/my_agent/tools/: __init__.py  hooks.py  registry.py  repo_tools.py
tests/: __init__.py  test_cli.py  test_config.py  test_indexer.py  test_schema.py  test_tools.py
